--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: kittygram_user
           POSTGRES_PASSWORD: kittygram_password
-          POSTGRES_DB: kittygram
+          POSTGRES_DB: kittygram_db
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -35,9 +35,10 @@ jobs:
         POSTGRES_USER: kittygram_user
         POSTGRES_PASSWORD: kittygram_password
         POSTGRES_DB: kittygram
-        SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
+        DB_NAME: kittygram_db
+        SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
       run: |
         python -m flake8 backend/
         cd backend/
