--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,9 @@ jobs:
       env:
         POSTGRES_USER: kittygram_user
         POSTGRES_PASSWORD: kittygram_password
-        POSTGRES_DB: kittygram
+        POSTGRES_DB: kittygram_db
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
-        DB_NAME: kittygram_db
         SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
       run: |
         python -m flake8 backend/
