--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: kittygram_user
           POSTGRES_PASSWORD: kittygram_password
-          POSTGRES_DB: kittygram
+          POSTGRES_DB: kittygram_db
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -34,10 +34,10 @@ jobs:
       env:
         POSTGRES_USER: kittygram_user
         POSTGRES_PASSWORD: kittygram_password
-        POSTGRES_DB: kittygram
-        SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        POSTGRES_DB: kittygram_db
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
+        SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
       run: |
         python -m flake8 backend/
         cd backend/
@@ -109,7 +109,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+      - name: Login to Docker
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
