--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,8 @@ jobs:
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
         SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        DEBUG: False
+        ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
       run: |
         python -m flake8 backend/
         cd backend/
